Update asm recipes to deploy gateway before sending traffic.

--- a/ingress/single-cluster/ingress-asm-multi-backendconfig/istio-ingressgateway-service.yaml
+++ b/ingress/single-cluster/ingress-asm-multi-backendconfig/istio-ingressgateway-service.yaml
@@ -11,6 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -92,5 +93,27 @@ spec:
                 port:
                   number: 15023
             pathType: Prefix
-
-
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: ingressgateway
+spec:
+  selector:
+    istio: ingressgateway # use Istio default gateway implementation
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+  - port:
+      number: 443
+      name: https
+      protocol: HTTPS
+    hosts:
+    - "*"
+    tls:
+      mode: SIMPLE # enables HTTPS on this port
+      credentialName: my-cert
