Add test for ingress-https.
* Add ingress-https test. Rename ssl policy name since it has a naming
  collision with ingress-grpc recipe.
* User needs to have a valid DNS domain and specify the DNS record name
  when running this test.

--- a/ingress/single-cluster/ingress-https/secure-ingress.yaml
+++ b/ingress/single-cluster/ingress-https/secure-ingress.yaml
@@ -49,7 +49,7 @@ kind: FrontendConfig
 metadata:
   name: ingress-security-config
 spec:
-  sslPolicy: gke-ingress-ssl-policy
+  sslPolicy: gke-ingress-ssl-policy-https
   redirectToHttps:
     enabled: true
 ---
