Add test for ingress-custom-grpc-health-check
* Update SSL policy name in the recipe README and yaml to avoid naming
  collision.
* Add a helper function to check if a string has the expected pattern
  count.
* Update instance image version since the offical docker install script
  doesn't work for debian-11.
* Add test for ingress-grpc recipe. The traffic is validated by running
  a grpc-client image on a docker and send grpc request to the load
  balancer IP.

--- a/ingress/single-cluster/ingress-custom-grpc-health-check/example/fe-ingress.yaml
+++ b/ingress/single-cluster/ingress-custom-grpc-health-check/example/fe-ingress.yaml
@@ -42,4 +42,4 @@ kind: FrontendConfig
 metadata:
   name: fe-frontend-config
 spec:
-  sslPolicy: gke-ingress-ssl-policy
+  sslPolicy: gke-ingress-ssl-policy-grpc
