Add `max-rate-per-endpoint` to Service resource.
The annotation is required as per public user guide:
https://cloud.google.com/kubernetes-engine/docs/how-to/horizontal-pod-autoscaling#autoscale-traffic.

--- a/gateway/docs/store-autoscale.yaml
+++ b/gateway/docs/store-autoscale.yaml
@@ -26,6 +26,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: store-autoscale
+  annotations:
+    networking.gke.io/max-rate-per-endpoint: "10"
 spec:
   ports:
   - port: 8080
